--- a/base/frontend-service.yaml
+++ b/base/frontend-service.yaml
@@ -7,7 +7,7 @@ metadata:
     alb.ingress.kubernetes.io/healthcheck-path: "/"
 spec:
   selector:
-    app: demo-fargate
+    app: frontend-fargate
   type: NodePort
   ports:
     - protocol: TCP
